# Animation_CharAnim_MecaSim

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  extra.css  gKit2light.cbp  gKit2light.layout  install.txt  l2_lifgfx.lua  main.cpp  master_CharAnim.lua  master_MecaSim.lua  premake4.lua  premake5.lua  readme.html  readme.md  toy.glsl  trace.glsl
data/: alpha.mtl  cornell_orbiter.txt  robot.gltf  robot.mtl
data/animation/: anim1.ani
data/es3_shaders/: es2_mesh.glsl  es2_text.glsl  mesh.glsl  mesh_color.glsl  normals.glsl  texcoords.glsl  text.glsl
data/shaders/: debug.glsl  debug_wireframe.glsl  es2_mesh_color.glsl  mesh.glsl  mesh_color.glsl  text.glsl  tonemap.glsl
emscripten/: emscripten_build.sh  shell_minimal.html
premake/: premake-CharA.bat  premake-corrige.bat  premake-l2.bat  premake.bat
src/: image_viewer.cpp  main.cpp  shader_kit.cpp  shader_kit_debug.cpp
src/gKit/: app.cpp  app.h  app_camera.cpp  app_camera.h  app_time.cpp  (+51 more)
tutos/: acceleration.txt  alpha.cpp  alpha.glsl  alpha_notexture.glsl  brdf.txt  brdf_lambert.glsl  bvh2.txt  compute.txt  cubemap.glsl  debut.txt  decal.glsl  decals.txt  deferred_decal.glsl  deferred_mesh.glsl  draw_cubemap.glsl  draw_decal.glsl  gkit2.txt  glsl.txt  instanceID.glsl  instance_buffer.glsl  interface.txt  intro.txt  intro1.glsl  intrort.txt  material_data.cpp  matiere.txt  mesh_buffer.cpp  mesh_buffer.h  mesh_data.cpp  mesh_data.h  mesh_viewer.cpp  mesh_viewer.glsl  min_atomic.glsl  min_data.cpp  min_data.glsl  pipeline.cpp  pipeline3d.cpp  pipeline_c.txt  pipeline_compute.glsl  precision.txt  (+99 more)
(+124 files in other folders)
